testsuite/tests/typing-misc/wellfounded.ml.reference

#     type _ prod = Prod : ('a * 'y) prod
#               Characters 82-96:
        type d = d * d
        ^^^^^^^^^^^^^^
Error: The type abbreviation d is cyclic
# 
